--- a/src/mk/components/ui/SideMenu/sidemenu.module.css
+++ b/src/mk/components/ui/SideMenu/sidemenu.module.css
@@ -11,8 +11,9 @@
       border-radius: 100%;
       position: absolute;
       top: 128px;
-      right: -10px;
+      right: -20px;
       cursor: pointer;
+      z-index: 999;
     }
   }
 }
